--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test-watch": "jest --watch",
+    "test-coverage": "jest --collectCoverage --"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
@@ -22,5 +25,11 @@
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.3",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1"
   }
 }
