--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "jest",
     "test-watch": "jest --watch",
-    "test-coverage": "jest --collectCoverage --"
+    "test-coverage": "jest --collectCoverage --",
+    "sca": "npx @sandworm/audit@latest"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
